add: dashboard check handler
