# docs/swagger.yaml
@@ -23,9 +23,15 @@ info:
   title: OpenStack Security Hub API
   version: "1.0"
 paths:
-  /check/identity-01:
+  /check/dashboard-01:
     get:
-      description: Execute all Identity-01 series security checks for OpenStack
+      description: Configuration files contain critical parameters and information
+        required for smooth functioning of the component. If an unprivileged user,
+        either intentionally or accidentally modifies or deletes any of the parameters
+        or the file itself then it would cause severe availability issues causing
+        a denial of service to the other end users. Thus user ownership of such critical
+        configuration files must be set to root and group ownership must be set to
+        horizon.
       produces:
       - application/json
       responses:
@@ -35,18 +41,42 @@ paths:
             items:
               $ref: '#/definitions/checklist.CheckResult'
             type: array
-        "500":
-          description: Internal Server Error
+      summary: Is user/group ownership of config files set to root/horizon?Is user/group
+        of config files set to root/horizon?
+      tags:
+      - dashboard
+  /check/identity-01:
+    get:
+      description: Configuration files contain critical parameters and information
+        required for smooth functioning of the component. If an unprivileged user,
+        either intentionally or accidentally modifies or deletes any of the parameters
+        or the file itself then it would cause severe availability issues causing
+        a denial of service to the other end users. Thus user and group ownership
+        of such critical configuration files must be set to that component owner.
+        Additionally, the containing directory should have the same ownership to ensure
+        that new files are owned correctly.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
           schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Run all Identity-01 security checks
+            items:
+              $ref: '#/definitions/checklist.CheckResult'
+            type: array
+      summary: Is user/group ownership of config files set to keystone?
       tags:
       - identity
   /check/identity-01-01:
     get:
-      description: Check Identity configuration security
+      description: Configuration files contain critical parameters and information
+        required for smooth functioning of the component. If an unprivileged user,
+        either intentionally or accidentally modifies or deletes any of the parameters
+        or the file itself then it would cause severe availability issues causing
+        a denial of service to the other end users. Thus user and group ownership
+        of such critical configuration files must be set to that component owner.
+        Additionally, the containing directory should have the same ownership to ensure
+        that new files are owned correctly.
       produces:
       - application/json
       responses:
@@ -54,18 +84,19 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/checklist.CheckResult'
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Run Identity-01-01 check
+      summary: Run Identity-01-01 (/etc/keystone/keystone.conf)
       tags:
       - identity
   /check/identity-01-02:
     get:
-      description: Check Identity configuration security
+      description: Configuration files contain critical parameters and information
+        required for smooth functioning of the component. If an unprivileged user,
+        either intentionally or accidentally modifies or deletes any of the parameters
+        or the file itself then it would cause severe availability issues causing
+        a denial of service to the other end users. Thus user and group ownership
+        of such critical configuration files must be set to that component owner.
+        Additionally, the containing directory should have the same ownership to ensure
+        that new files are owned correctly.
       produces:
       - application/json
       responses:
@@ -73,13 +104,16 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/checklist.CheckResult'
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Run Identity-01-02 check
+      summary: Run Identity-01-02 (/etc/keystone/keystone-paste.ini)
       tags:
       - identity
+  /health:
+    get:
+      description: Check if the API server is running
+      produces:
+      - application/json
+      responses: {}
+      summary: Health check endpoint
+      tags:
+      - health
 swagger: "2.0"
